--- a/tests/docker-compose.yaml
+++ b/tests/docker-compose.yaml
@@ -5,19 +5,20 @@ services:
       POSTGRES_DB: "confluence"
       POSTGRES_USER: "confluence"
       POSTGRES_PASSWORD: "confluence"
+    volumes:
+      - pgdata-src:/var/lib/postgresql/data
 
   confluence-src:
     image: atlassian/confluence:9.2.2
-    env_file: .env.confluence
     environment:
-      ATL_FORCE_CFG_UPDATE: true
       ATL_JDBC_URL: "jdbc:postgresql://postgresql-src:5432/confluence"
       ATL_JDBC_USER: "confluence"
       ATL_JDBC_PASSWORD: "confluence"
       ATL_DB_TYPE: "postgresql"
-      ATL_PRODUCT_SERVER_ID: "BFZJ-WRKR-422L-FZEU"
     ports:
       - "8090:8090"
+    volumes:
+      - confluence-src:/var/atlassian/application-data/confluence
 
   postgresql-dst:
     image: postgres:16
@@ -25,16 +26,23 @@ services:
       POSTGRES_DB: "confluence"
       POSTGRES_USER: "confluence"
       POSTGRES_PASSWORD: "confluence"
+    volumes:
+      - pgdata-dst:/var/lib/postgresql/data
 
   confluence-dst:
     image: atlassian/confluence:9.2.2
-    env_file: .env.confluence
     environment:
-      ATL_FORCE_CFG_UPDATE: true
       ATL_JDBC_URL: "jdbc:postgresql://postgresql-dst:5432/confluence"
       ATL_JDBC_USER: "confluence"
       ATL_JDBC_PASSWORD: "confluence"
       ATL_DB_TYPE: "postgresql"
-      ATL_PRODUCT_SERVER_ID: "BFZJ-WRKR-422L-FZEU"
     ports:
       - "9090:8090"
+    volumes:
+      - confluence-dst:/var/atlassian/application-data/confluence
+
+volumes:
+  pgdata-src:
+  confluence-src:
+  pgdata-dst:
+  confluence-dst:
